--- a/site/index.html
+++ b/site/index.html
@@ -1097,7 +1097,15 @@
 </tr>
 <tr>
 <td><a href="https://docs.wpilib.org/en/stable/docs/zero-to-robot/step-3/radio-programming.html">FRC Radio Imager</a></td>
-<td>A tool that is used to configure the radio that is used to connect the robot to the driver station. It is used to configure the radio to connect to the robot's radio.</td>
+<td>A tool that is used to configure the radio that is used to connect the robot to the driver station.</td>
+</tr>
+<tr>
+<td><a href="https://desktop.github.com/">Github Desktop</a></td>
+<td>A tool that is used to manage the code that is used to program the robot.</td>
+</tr>
+<tr>
+<td><a href="https://apps.microsoft.com/detail/9NVV4PWDW27Z?hl=en-us&amp;gl=US">Phoenix Tuner X</a></td>
+<td>A tool that is used to configure the Phoenix brand motor controllers and other components that are used to control the motors on the robot. This app is not supported for Mac OS.</td>
 </tr>
 </tbody>
 </table>
